oops, forgot to push this one, will merge VS changes, probably the same