@@ -4,13 +4,13 @@ plugins {
 }
 
 application {
-    mainClassName = 'refactoring.Refactor'
+    mainClassName = 'refactoring.Main'
 }
 
 // Make a fat Jar
 jar {
     manifest {
-        attributes 'Main-Class': 'refactoring.Refactor',
+        attributes 'Main-Class': 'refactoring.Main',
                    'Class-Path': 'absfrontend.jar'
     }
     from {
@@ -30,5 +30,21 @@ repositories {
 dependencies {
     testImplementation 'junit:junit:4.13.1'
     testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
+    //implementation 'info.picocli:picocli:4.5.2'
+    //annotationProcessor 'info.picocli:picocli-codegen:4.5.2'
     implementation files('libs/absfrontend.jar')
 }
+
+// Needed for the preview features like pattern matching instanceof
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
